# AI-Software-Architect

./: .gitignore
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 656ee638c105_init_auth.py  a1b2c3d4e5f6_add_projects.py  b2c3d4e5f6a7_add_project_stack.py  c3d4e5f6a7b8_add_project_files.py  d4e5f6a7b8c9_add_symbols.py  e5f6a7b8c9d0_symbol_search_indexes.py  f6a7b8c9d0e1_add_graph_edges.py
backend/app/: main.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  graph.py  project.py  symbol.py  user.py
backend/app/modules/analysis/: __init__.py  dependencies.py
backend/app/modules/analysis/controllers/: __init__.py  callgraph_controller.py  dependency_controller.py  file_controller.py  symbol_controller.py
backend/app/modules/analysis/dto/: __init__.py  responses.py
backend/app/modules/analysis/middlewares/: __init__.py  error_handlers.py
backend/app/modules/analysis/repositories/: __init__.py  graph_repository.py  symbol_repository.py
backend/app/modules/analysis/routes/: __init__.py  analysis_routes.py
backend/app/modules/auth/: dependencies.py
backend/app/modules/projects/: dependencies.py
backend/tests/: test_detection.py  test_file_viewer.py  test_github_url.py  test_javascript_parser.py  test_parser_registry.py  test_password_service.py  test_python_parser.py  test_scanner.py  test_symbol_ranking.py  test_symbol_service.py  test_tree_service.py  test_zip_safety.py
(+122 files in other folders)
