[project]
name = "ai-software-architect-backend"
version = "0.1.0"
description = "Authentication module backend for AI Software Architect"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
    "python-jose[cryptography]>=3.3",
    "google-auth>=2.30",
    "slowapi>=0.1.9",
    "fastapi-mail>=1.4",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
